--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </div> -->
 
     <!-- tentang kami -->
-    <div class="container-fluid warna3 py-5">
+<!--     <div class="container-fluid warna3 py-5">
         <div class="container text-center">
             <h3>Tentang Kami</h3>
             <p class="fs5 mt-4">
@@ -87,7 +87,7 @@
             </p>
         </div>
     </div>
-
+ -->
     <!-- display produk -->
     <div class="container-fluid py-5">
         <div class="container text-center">
