--- a/produk.html
+++ b/produk.html
@@ -1,25 +1,3 @@
-<?php
-    require "koneksi.php";
-    $queryKategori = mysqli_query($con, "SELECT * FROM kategori");
-
-    // query by search
-    if(isset($_GET['keyword'])){
-        $queryProduk = mysqli_query($con, "SELECT * FROM produk WHERE nama LIKE '%$_GET[keyword]%'");
-    }
-    // query by kategori
-    else if(isset($_GET['kategori'])){
-        $queryGetKategoriId = mysqli_query($con, "SELECT id FROM kategori WHERE nama='$_GET[kategori]'");
-        $kategoriId = mysqli_fetch_array($queryGetKategoriId);
-        $queryProduk = mysqli_query($con, "SELECT * FROM produk WHERE kategori_id='$kategoriId[id]'");
-    }
-    // query default
-    else{
-        $queryProduk = mysqli_query($con, "SELECT * FROM produk");
-    }
-
-    $countData = mysqli_num_rows($queryProduk);
-?>
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -34,26 +12,26 @@
 <body>
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark warna1">
-    <div class="container">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item me-4">
-                    <a class="nav-link"  href="index.php">Home</a>
-                </li>
-                <li class="nav-item me-4">
-                    <a class="nav-link" href="tentang-kami.php">Tentang Kami</a>
-                </li>
-                <li class="nav-item me-4">
-                    <a class="nav-link" href="produk.php">Produk</a>
-                </li>
-            </ul>
+        <div class="container">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item me-4">
+                        <a class="nav-link"  href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item me-4">
+                        <a class="nav-link" href="tentang-kami.html">Tentang Kami</a>
+                    </li>
+                    <li class="nav-item me-4">
+                        <a class="nav-link" href="produk.html">Produk</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
-    </nav>
-    
+        </nav>
+
     <!-- banner -->
     <div class="container-fluid banner-produk d-flex align-items-center">
         <div class="container text-center text-white">
@@ -62,51 +40,99 @@
     </div>
 
     <!-- body -->
-    <div class="container py-5">
-        <div class="row">
-            <!-- kategori -->
-            <div class="col-lg-3 mb-5">
-                <h3>Kategori</h3>
-                <ul class="list-group">
-                    <?php while($kategori = mysqli_fetch_array($queryKategori)){ ?>
-                    <a class="no-decoration" href="produk.php?kategori=<?php echo $kategori['nama']; ?>">
-                        <li class="list-group-item"><?php echo $kategori['nama']; ?></li>
-                    </a>
-                    <?php } ?>
-                </ul>
-            </div>
-            <!-- produk -->
-            <div class="col-lg-9">
-                <h3 class="text-center mb-3">Produk</h3>
-                <div class="row">
-                    <?php 
-                        if($countData < 1){
-                    ?>
-                    <h4 class="text-center my-5">Produk yang anda cari tidak tersedia</h4>
-                    <?php
-                        }
-                    ?>
-                    <?php while($produk = mysqli_fetch_array($queryProduk)){ ?>
-                    <div class="col-md-4 mb-4">
-                        <div class="card h-100">
-                            <div class="image-box">
-                                <img src="image/<?php echo $produk['foto']; ?>" class="card-img-top" alt="...">
-                            </div>
-                            <div class="card-body">
-                                <h4 class="card-title"><?php echo $produk['nama']; ?></h4>
-                                <p class="card-text text-truncate"><?php echo $produk['detail']; ?></p>
-                                <p class="card-text text-harga">Rp <?php echo $produk['harga']; ?></p>
-                                <a href="produk-detail.php?nama=<?php echo $produk['nama']; ?>" class="btn warna2 text-white">Lihat Detail</a>
-                            </div>
+    <div class="container-fluid py-5">
+        <div class="container text-center">
+
+            <div class="row mt-5">
+                <div class="col-sm-6 col-md-4 mb-3">
+                    <div class="card h-100">
+                        <div class="image-box">
+                            <img src="image/produk/1.jpg " class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title">Keripik Daun Singkong</h4>
+                            <p class="card-text text-truncate">Dijuluki belut darat karena kemiripan rasa </p> 
+                            <!-- yang memiliki rasa seperti belut sehingga mendapatkan julukan keripik belut darat -->
                         </div>
                     </div>
-                    <?php } ?>
                 </div>
-            </div>
+
+                <div class="col-sm-6 col-md-4 mb-3">
+                    <div class="card h-100">
+                        <div class="image-box">
+                            <img src="image/produk/2.jpg " class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title">Keripik Pare</h4>
+                            <p class="card-text text-truncate">Pare yang diolah sehingga tidak terasa pahit</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-md-4 mb-3">
+                    <div class="card h-100">
+                        <div class="image-box">
+                            <img src="image/produk/3.jpg " class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title">Stik Pepaya</h4>
+                            <p class="card-text text-truncate">Pepaya parut cocok untuk kudapan ringan</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-md-4 mb-3">
+                    <div class="card h-100">
+                        <div class="image-box">
+                            <img src="image/produk/4.jpg" class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title">Keripik Kelapa</h4>
+                            <p class="card-text text-truncate">Daging kelapa yang gurih</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-md-4 mb-3">
+                    <div class="card h-100">
+                        <div class="image-box">
+                            <img src="image/produk/5.jpg" class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title">Keripik Pisang Coklat Lumer</h4>
+                            <p class="card-text text-truncate">Pisang dengan lapisan coklat leleh</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-md-4 mb-3">
+                    <div class="card h-100">
+                        <div class="image-box">
+                            <img src="image/produk/6.jpg" class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title">Peyek Kacang Rapet</h4>
+                            <p class="card-text text-truncate">Peyek dengan kacang utuh </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-md-4 mb-3">
+                    <div class="card h-100">
+                        <div class="image-box">
+                            <img src="produk/7.jpg" class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title">Keripik Kacang Jarak</h4>
+                            <p class="card-text text-truncate">Keripik kacang klasik</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>    
         </div>
     </div>
     
-    <!-- footer -->
       <!-- Footer -->
 <footer class="text-center text-lg-start bg-body-tertiary text-muted">
   <!-- Section: Social media -->
