--- a/produk.html
+++ b/produk.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Toko Online | Produk</title>
+    <title>Keripik Omah Sri | Produk</title>
 </head>
 <body>
     <!-- navbar -->
