--- a/tentang-kami.html
+++ b/tentang-kami.html
@@ -9,26 +9,27 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark warna1">
-    <div class="container">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item me-4">
-                    <a class="nav-link"  href="index.php">Home</a>
-                </li>
-                <li class="nav-item me-4">
-                    <a class="nav-link" href="tentang-kami.php">Tentang Kami</a>
-                </li>
-                <li class="nav-item me-4">
-                    <a class="nav-link" href="produk.php">Produk</a>
-                </li>
-            </ul>
+    <!-- navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark warna1">
+        <div class="container">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item me-4">
+                        <a class="nav-link"  href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item me-4">
+                        <a class="nav-link" href="tentang-kami.html">Tentang Kami</a>
+                    </li>
+                    <li class="nav-item me-4">
+                        <a class="nav-link" href="produk.html">Produk</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
-    </nav>
+        </nav>
     <div class="container-fluid banner2 d-flex align-items-center">
         <div class="container">
             <h1 class="text-white text-center"> TENTANG KAMI</h1>
@@ -37,12 +38,10 @@
     <div class="container-fluid py-5">
         <div class="container fs-5 text-center">
             <p>
-            Pekon Ambarawa adalah salah satu desa/pekon dalam Wilayah Kecamatan Ambarawa Kabupaten Pringsewu 
-            Provinsi Lampung yang pada mulanya tanah hutan Marga Way Lima yang dikuasai Pasirah Syahpuhanda (Alm). 
-            Areal hutan tersubut atas  ijin Pasirah Marga Way Lima mulai di buka Tahun 1933 oleh sebanyak 10 Kepala 
-            Rumah Tangga di bawah pimpinan Hi. Achmad Ghardi(Alm). Kemudian pada tahun 1933 itu juga, oleh Pasirah Marga 
-            Way Lima areal tanah marga yang telah dibuka itu di resmikan menjadi desa/pekon dengan nama Ambarawa dan Bapak Hi. 
-            Achmad Ghardi (Alm) ditetapkan menjadi Kepala desa/pekon pertama (Ke-1) sampai dengan tahun 1950, dan pada waktu itu penduduk Desa/Pekon Ambarawa terdapat 150 KK dengan jumlah jiwa 350 orang.
+                Aneka Keripik Tradisional Omah Sri merupakan salah satu UMKM 
+                yang terletak di Sidokerto yang didirikan oleh Omah Sri itu sendiri yang merupakan penduduk asli Sidokerto.
+                Pemikiran Omah Sri yang kreatif memungkinkan Omah Sri untuk berinovasi dalam menciptakan produk yang dapat memberikan pengalaman kuliner yang unik. 
+                Omah Sri memproduksi keripik dengan berbagai bahan baku seperti daun singkong, kelapa, pare, pepaya, pisang, kacang dll.
             </p>
         </div>
     </div>
