--- a/produk.html
+++ b/produk.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Keripik Omah Sri | Produk</title>
+    <title>Toko Online | Produk</title>
 </head>
 <body>
     <!-- navbar -->
@@ -35,14 +35,14 @@
     <!-- banner -->
     <div class="container-fluid banner-produk d-flex align-items-center">
         <div class="container text-center text-white">
-            <h1>Produk</h1>
+            <!-- <h1>Produk</h1> -->
         </div>
     </div>
 
     <!-- body -->
     <div class="container-fluid py-5">
         <div class="container text-center">
-
+          <h3 class="text-center mb-3">Produk</h3>
             <div class="row mt-5">
                 <div class="col-sm-6 col-md-4 mb-3">
                     <div class="card h-100">
@@ -133,18 +133,18 @@
         </div>
     </div>
     
-      <!-- Footer -->
+<!-- Footer -->
 <footer class="text-center text-lg-start bg-body-tertiary text-muted">
   <!-- Section: Social media -->
   <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
     <!-- Left -->
     <div class="me-5 d-none d-lg-block">
-      <span>Get connected with us on social networks:</span>
+      <!-- <span>Get connected with us on social networks:</span> -->
     </div>
     <!-- Left -->
 
     <!-- Right -->
-    <div>
+    <!-- <div>
       <a href="" class="me-4 text-reset">
         <i class="fab fa-facebook-f"></i>
       </a>
@@ -163,7 +163,7 @@
       <a href="" class="me-4 text-reset">
         <i class="fab fa-github"></i>
       </a>
-    </div>
+    </div> -->
     <!-- Right -->
   </section>
   <!-- Section: Social media -->
@@ -180,8 +180,7 @@
             <i class="fas fa-gem me-3"></i>Aneka Keripik Omah Sri
           </h6>
           <p>
-            Here you can use rows and columns to organize your footer content. Lorem ipsum
-            dolor sit amet, consectetur adipisicing elit.
+            Aneka keripik tradisional yang di produksi di Sidokerto.
           </p>
         </div>
         <!-- Grid column -->
@@ -193,17 +192,17 @@
             Products
           </h6>
           <p>
-            <a href="#!" class="text-reset">Angular</a>
+            <a href="produk.html" class="text-reset">Katalog</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">React</a>
+            <a href="tentang-kami.html" class="text-reset">Pemesanan</a>
           </p>
-          <p>
+          <!-- <p>
             <a href="#!" class="text-reset">Vue</a>
           </p>
           <p>
             <a href="#!" class="text-reset">Laravel</a>
-          </p>
+          </p> -->
         </div>
         <!-- Grid column -->
 
@@ -211,19 +210,19 @@
         <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
           <!-- Links -->
           <h6 class="text-uppercase fw-bold mb-4">
-            Useful links
+            Tentang
           </h6>
           <p>
-            <a href="#!" class="text-reset">Pricing</a>
+            <a href="https://www.itera.ac.id/" class="text-reset">Itera</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Settings</a>
+            <a href="http://if.itera.ac.id/" class="text-reset">Teknik Informatika Itera</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Orders</a>
+            <a href="https://kkn.itera.ac.id/" class="text-reset">KKN Itera</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Help</a>
+            <a href="#!" class="text-reset">Developer</a>
           </p>
         </div>
         <!-- Grid column -->
@@ -232,12 +231,10 @@
         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
           <!-- Links -->
           <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-          <p><i class="fas fa-home me-3"></i> Sidokerto</p>
-          <p>
-            <i class="fas fa-envelope me-3"></i>
-            info@example.com
-          </p>
-          <p><i class="fas fa-phone me-3"></i> + 62 831 4845 4644</p>
+          <p><i class="fas fa-home me-3"></i> <a href="https://maps.app.goo.gl/3LPax1WiMWAygjZ8A" class="text-reset" > Dusun IV Sidokerto</a></p>
+          <p><i class="fab fa-facebook-f me-3" ></i><a href="https://www.facebook.com/sri.srimurisah?mibextid=ZbWKwL" class="text-reset" > Omah Sri</a></p>
+          <p><i class="fas fa-envelope me-3"></i> <a href="heruzulkarnaen@gmail.com" class="text-reset" >heruzulkarnaen@gmail.com </a></p>
+          <p><i class="fas fa-phone me-3"></i> <a href="https://wa.me/+6283148454644" class="text-reset" >+ 62 831 4845 4644</a></p>
 
         </div>
         <!-- Grid column -->
@@ -246,11 +243,12 @@
     </div>
   </section>
   <!-- Section: Links  -->
+  
 
   <!-- Copyright -->
   <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
     © 2024 Copyright:
-    <a class="text-reset fw-bold" href="https://mdbootstrap.com/">ITERA</a>
+    <a class="text-reset fw-bold" href="https://www.itera.ac.id/">ITERA</a>
   </div>
   <!-- Copyright -->
 </footer>
